@@ -1,0 +1,4 @@
+<?php
+
+define('PAY_PS_OPTION_DATA_MATCH_CHECK_DISABLED', 'off');
+
