@@ -1,3 +1,6 @@
+2021/12/04 (version 1.0.6)
+- General: Added setting to disable data checking on the option
+
 2021/02/18 (version 1.0.5)
 - General: Added module hooks
 
